chages to search mechanics